update check trung ngay YL & THYL